// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for alignSelf: "auto" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for alignSelf: "baseline" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: baseline !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for alignSelf: "center" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: center !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for alignSelf: "flex-end" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: flex-end !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for alignSelf: "flex-start" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: flex-start !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for alignSelf: "stretch" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: stretch !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for alignSelf: {"base":"stretch","xs":"center","s":"stretch","m":"center","l":"stretch","xl":"center"} 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: stretch !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}
@media (min-width: 480px) {
  :host {
    align-self: center !important;
  }
}

@media (min-width: 760px) {
  :host {
    align-self: stretch !important;
  }
}

@media (min-width: 1000px) {
  :host {
    align-self: center !important;
  }
}

@media (min-width: 1300px) {
  :host {
    align-self: stretch !important;
  }
}

@media (min-width: 1760px) {
  :host {
    align-self: center !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for all props being breakpoint customizable 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 33.333333% !important;
  align-self: stretch !important;
  flex: auto !important;
}
@media (min-width: 480px) {
  :host {
    width: 50% !important;
    margin-left: 50% !important;
    align-self: center !important;
    flex: 1 1 0 !important;
  }
}

@media (min-width: 760px) {
  :host {
    width: auto% !important;
    margin-left: 33.333333% !important;
    align-self: stretch !important;
    flex: auto !important;
  }
}

@media (min-width: 1000px) {
  :host {
    width: 50% !important;
    margin-left: 50% !important;
    align-self: center !important;
    flex: 1 1 0 !important;
  }
}

@media (min-width: 1300px) {
  :host {
    width: auto% !important;
    margin-left: 33.333333% !important;
    align-self: stretch !important;
    flex: auto !important;
  }
}

@media (min-width: 1760px) {
  :host {
    width: 50% !important;
    margin-left: 50% !important;
    align-self: center !important;
    flex: 1 1 0 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for flex: "auto" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex: auto !important;
}"
`;

exports[`getComponentCss() should return correct css for flex: "equal" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex: 1 1 0 !important;
}"
`;

exports[`getComponentCss() should return correct css for flex: "initial" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for flex: "none" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex: none !important;
}"
`;

exports[`getComponentCss() should return correct css for flex: {"base":"auto","xs":"equal","s":"auto","m":"equal","l":"auto","xl":"equal"} 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex: auto !important;
}
@media (min-width: 480px) {
  :host {
    flex: 1 1 0 !important;
  }
}

@media (min-width: 760px) {
  :host {
    flex: auto !important;
  }
}

@media (min-width: 1000px) {
  :host {
    flex: 1 1 0 !important;
  }
}

@media (min-width: 1300px) {
  :host {
    flex: auto !important;
  }
}

@media (min-width: 1760px) {
  :host {
    flex: 1 1 0 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for grow: {"base":1,"xs":0,"s":1,"m":0,"l":1,"xl":0} 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 1 !important;
  flex-shrink: 1 !important;
}
@media (min-width: 480px) {
  :host {
    flex-grow: 0 !important;
  }
}

@media (min-width: 760px) {
  :host {
    flex-grow: 1 !important;
  }
}

@media (min-width: 1000px) {
  :host {
    flex-grow: 0 !important;
  }
}

@media (min-width: 1300px) {
  :host {
    flex-grow: 1 !important;
  }
}

@media (min-width: 1760px) {
  :host {
    flex-grow: 0 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for grow: 0 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for grow: 1 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 1 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for offset: "half" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 50% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for offset: "none" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for offset: "one-quarter" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 25% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for offset: "one-third" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 33.333333% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for offset: "three-quarters" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 75% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for offset: "two-thirds" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 66.666667% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for offset: {"base":"one-third","xs":"half","s":"one-third","m":"half","l":"one-third","xl":"half"} 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 33.333333% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}
@media (min-width: 480px) {
  :host {
    margin-left: 50% !important;
  }
}

@media (min-width: 760px) {
  :host {
    margin-left: 33.333333% !important;
  }
}

@media (min-width: 1000px) {
  :host {
    margin-left: 50% !important;
  }
}

@media (min-width: 1300px) {
  :host {
    margin-left: 33.333333% !important;
  }
}

@media (min-width: 1760px) {
  :host {
    margin-left: 50% !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for shrink: {"base":0,"xs":1,"s":0,"m":1,"l":0,"xl":1} 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 0 !important;
}
@media (min-width: 480px) {
  :host {
    flex-shrink: 1 !important;
  }
}

@media (min-width: 760px) {
  :host {
    flex-shrink: 0 !important;
  }
}

@media (min-width: 1000px) {
  :host {
    flex-shrink: 1 !important;
  }
}

@media (min-width: 1300px) {
  :host {
    flex-shrink: 0 !important;
  }
}

@media (min-width: 1760px) {
  :host {
    flex-shrink: 1 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for shrink: 0 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 0 !important;
}"
`;

exports[`getComponentCss() should return correct css for shrink: 1 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for width: "auto" 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for width: "full" 1`] = `
":host {
  box-sizing: border-box !important;
  width: 100% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for width: "half" 1`] = `
":host {
  box-sizing: border-box !important;
  width: 50% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for width: "one-quarter" 1`] = `
":host {
  box-sizing: border-box !important;
  width: 25% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for width: "one-third" 1`] = `
":host {
  box-sizing: border-box !important;
  width: 33.333333% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for width: "three-quarters" 1`] = `
":host {
  box-sizing: border-box !important;
  width: 75% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for width: "two-thirds" 1`] = `
":host {
  box-sizing: border-box !important;
  width: 66.666667% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}"
`;

exports[`getComponentCss() should return correct css for width: {"base":"auto","xs":"half","s":"auto","m":"half","l":"auto","xl":"half"} 1`] = `
":host {
  box-sizing: border-box !important;
  width: auto% !important;
  margin-left: 0% !important;
  align-self: auto !important;
  flex-grow: 0 !important;
  flex-shrink: 1 !important;
}
@media (min-width: 480px) {
  :host {
    width: 50% !important;
  }
}

@media (min-width: 760px) {
  :host {
    width: auto% !important;
  }
}

@media (min-width: 1000px) {
  :host {
    width: 50% !important;
  }
}

@media (min-width: 1300px) {
  :host {
    width: auto% !important;
  }
}

@media (min-width: 1760px) {
  :host {
    width: 50% !important;
  }
}
"
`;
